# Ingat

./: README.md  RELEASE_NOTES.md  SETUP_GUIDE.md  index.html  package.json  tailwind.config.cjs
.github/workflows/: release.yml
scripts/: check-service.ps1  check-service.sh  start-service.ps1  start-service.sh  stop-service.ps1  stop-service.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build-binaries.ps1  build-binaries.sh  tauri.build.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  power_manager.rs  service_manager.rs  settings.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/dtos/: mod.rs
src-tauri/src/application/services/: context_service.rs  mod.rs
src-tauri/src/domain/: errors.rs  mod.rs
src-tauri/src/domain/models/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/embeddings/: fastembed_engine.rs  mod.rs  noop_engine.rs  simple_engine.rs
src-tauri/src/infrastructure/http_client/: mod.rs  remote_store.rs
src-tauri/src/infrastructure/storage/: mod.rs  sled_store.rs
src-tauri/src/interfaces/: mcp.rs  mod.rs
src/components/: ContextDetails.tsx  ContextForm.tsx  EmbeddingSettings.tsx  HistoryPanel.tsx  SearchPanel.tsx  SearchResults.tsx  ServiceStatus.tsx
src/lib/: memoryClient.ts
src/types/: context.ts
