[package]
name = "ingat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ingat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ingat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ingat"
path = "src/main.rs"

[[bin]]
name = "mcp_bridge"
path = "src/bin/mcp_bridge.rs"
required-features = ["mcp-server"]

[[bin]]
name = "mcp_stdio"
path = "src/bin/mcp_stdio.rs"
required-features = ["mcp-server"]

[[bin]]
name = "mcp_service"
path = "src/bin/mcp_service.rs"
required-features = ["mcp-server", "tauri-plugin"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Optional integrations
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"], optional = true }
rmcp = { version = "0.8.5", features = ["server", "transport-io", "transport-sse-server", "macros"], optional = true }

# HTTP server dependencies (for mcp-service)
axum = { version = "0.7", features = ["tokio"], optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

# Core stack
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
sled = "0.34"
parking_lot = "0.12"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-std", "io-util", "process", "signal"] }
tokio-util = { version = "0.7", features = ["full"] }
schemars = { version = "1.1", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
base64 = "0.22"
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
which = "6.0"
ahash = "0.8"
tauri-plugin-fs = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[features]
default = ["simple-embed", "mcp-server"]
simple-embed = []
fastembed-engine = ["dep:fastembed"]
mcp-server = ["dep:rmcp", "dep:schemars", "dep:tracing-subscriber"]
tauri-plugin = ["dep:axum", "dep:async-stream", "dep:futures"]
